# VideoPlayer

./: .gitignore  BUILD.md  DEPENDENCIES.md  README.md  check-workflows.sh  compile.txt  copy-assets.bat  copy-assets.sh  githubactions.txt  package-lock.json  package.json  resume.txt  setup.bat  setup.sh  sync-version.js
.github/: BUILD.md  QUICK-BUILD.md  WORKFLOWS.md
.github/workflows/: build-all-platforms.yml  build-macos-arm.yml  build-windows.yml  build.yml  linux-only.yml  macos-intel-only.yml  macos-only.yml  manual-release.yml  package-all-platforms.yml  package-linux-x64.yml  package-macos-arm64.yml  package-macos-x64.yml  package-windows-arm64.yml  package-windows-x64.yml  release.yml  windows-arm-only.yml  windows-only.yml
musescore-plugin/: README.md  VideoPlayer.qml
plugins/: VideoPlayer.qml
public/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
webrtc/: package-lock.json  package.json  webrtc-server.js  webrtc-server.js.before-cleanup  webrtc-server.js.before-debug-flags
